???? 0.10.0.7
    user visible changes, admin:
    * New command verify-repo checks local files against index.
    * Added verify-repo to gui mode.
    * Gui mode: the run checkbox is disabled for commands that do not accept --run.

    programmer visible changes:
    * Extended the number of variable name endings that, when read, call os.path.normpath on the value:  "_PATH", "_DIR", "_DIR_NAME", "_FILE_NAME", "_PATH__", "_DIR__", "_DIR_NAME__", "_FILE_NAME__".
    * Added  validate=False to some boto function calls to better handle certificate problems.
    * Added empty certificate to opening a URL in function open_for_read_file_or_url to better handle certificate problems.
    * When reading the local instl_config file, reading of internal variables is now allowed, to allow for simulating various situations.
    * Removed some time measuring code where it was not needed. In some places replaced time.time() with time.clock() which is (supposedly)
        more accurate on Windows.
    * Added boto to the list of maodules in import-check and in pyinstaller compilation.

31/5/2015 0.10.0.6

    programmer visible changes:
    * Replaced default value path_so_far=list() with path_so_far=None
    * fixed wrong parameter name on CopyTool_win_xcopy.copy_dir_files_to_dir
    * Moved the curl config folder to be created in the bookkeeping folder so curls files for two version
        will not step on each other.
    * Better ConnectionHTTP.translate_url acts only on the path part.
    * DownloadToolBase.add_download_url in InstlInstanceSync_url.create_download_instructions_for_item: translate_url applied only to URLs created by instl.
    * Reading of info map file checks only checksum not sig.
    * Case insensitive checksum checks.
    * Checks with multi regexes are combined with new function compile_regex_list_ORed, used in conjuction with followingparams:
        FOLDER_WTAR_REGEX, FILE_WTAR_REGEX, FOLDER_EXCLUDE_REGEX, FILE_EXCLUDE_REGEX.